UPDATE: Fixed naqsh javascript workflow

--- a/.github/workflows/naqsh-js-ci.yml
+++ b/.github/workflows/naqsh-js-ci.yml
@@ -86,7 +86,7 @@ jobs:
         if: ${{ !matrix.settings.docker }}
         with:
           node-version: 20
-          cache: npm run
+          cache: npm
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         if: ${{ !matrix.settings.docker }}
