--- a/.github/workflows/naqsh-js-ci.yml
+++ b/.github/workflows/naqsh-js-ci.yml
@@ -37,7 +37,7 @@ jobs:
           - host: windows-latest
             build: |
               npm run build --target i686-pc-windows-msvc
-              npm run test
+              npm test
             target: i686-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -113,16 +113,16 @@ jobs:
         shell: bash
       - name: Setup node x86
         if: matrix.settings.target == 'i686-pc-windows-msvc'
-        run: npm run config set supportedArchitectures.cpu "ia32"
+        run: npm config set supportedArchitectures.cpu "ia32"
         shell: bash
       - name: Install dependencies
-        run: npm run install
+        run: npm install
       - name: Setup node x86
         uses: actions/setup-node@v4
         if: matrix.settings.target == 'i686-pc-windows-msvc'
         with:
           node-version: 20
-          cache: npm run
+          cache: npm
           architecture: x86
       - name: Build in docker
         uses: addnab/docker-run-action@v3
@@ -161,7 +161,7 @@ jobs:
           shell: bash
           run: |
             sudo pkg install -y -f curl node libnghttp2 npm
-            sudo npm install -g npm run --ignore-scripts
+            sudo npm install -g npm --ignore-scripts
             curl https://sh.rustup.rs -sSf --output rustup.sh
             sh rustup.sh -y --profile minimal --default-toolchain beta
             source "$HOME/.cargo/env"
@@ -169,18 +169,18 @@ jobs:
             rustc --version
             echo "~~~~ node -v ~~~~"
             node -v
-            echo "~~~~ npm run --version ~~~~"
-            npm run --version
+            echo "~~~~ npm --version ~~~~"
+            npm --version
             pwd
             ls -lah
             whoami
             env
             freebsd-version
-            npm run install
+            npm install
             npm run build
             rm -rf node_modules
             rm -rf target
-            rm -rf .npm run/cache
+            rm -rf .npm/cache
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -214,10 +214,10 @@ jobs:
   #       uses: actions/setup-node@v4
   #       with:
   #         node-version: ${{ matrix.node }}
-  #         cache: npm run
+  #         cache: npm
   #         architecture: ${{ matrix.settings.architecture }}
   #     - name: Install dependencies
-  #       run: npm run install
+  #       run: npm install
   #     - name: Download artifacts
   #       uses: actions/download-artifact@v4
   #       with:
@@ -227,7 +227,7 @@ jobs:
   #       run: ls -R .
   #       shell: bash
   #     - name: Test bindings
-  #       run: npm run test
+  #       run: npm test
   # test-linux-x64-gnu-binding:
   #   name: Test bindings on Linux-x64-gnu - node@${{ matrix.node }}
   #   needs:
@@ -245,9 +245,9 @@ jobs:
   #       uses: actions/setup-node@v4
   #       with:
   #         node-version: ${{ matrix.node }}
-  #         cache: npm run
+  #         cache: npm
   #     - name: Install dependencies
-  #       run: npm run install
+  #       run: npm install
   #     - name: Download artifacts
   #       uses: actions/download-artifact@v4
   #       with:
@@ -257,7 +257,7 @@ jobs:
   #       run: ls -R .
   #       shell: bash
   #     - name: Test bindings
-  #       run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-slim npm run test
+  #       run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-slim npm test
   # test-linux-x64-musl-binding:
   #   name: Test bindings on x86_64-unknown-linux-musl - node@${{ matrix.node }}
   #   needs:
@@ -275,11 +275,11 @@ jobs:
   #       uses: actions/setup-node@v4
   #       with:
   #         node-version: ${{ matrix.node }}
-  #         cache: npm run
+  #         cache: npm
   #     - name: Install dependencies
   #       run: |
-  #         npm run config set supportedArchitectures.libc "musl"
-  #         npm run install
+  #         npm config set supportedArchitectures.libc "musl"
+  #         npm install
   #     - name: Download artifacts
   #       uses: actions/download-artifact@v4
   #       with:
@@ -289,7 +289,7 @@ jobs:
   #       run: ls -R .
   #       shell: bash
   #     - name: Test bindings
-  #       run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-alpine npm run test
+  #       run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-alpine npm test
   # test-linux-aarch64-gnu-binding:
   #   name: Test bindings on aarch64-unknown-linux-gnu - node@${{ matrix.node }}
   #   needs:
@@ -313,9 +313,9 @@ jobs:
   #       shell: bash
   #     - name: Install dependencies
   #       run: |
-  #         npm run config set supportedArchitectures.cpu "arm64"
-  #         npm run config set supportedArchitectures.libc "glibc"
-  #         npm run install
+  #         npm config set supportedArchitectures.cpu "arm64"
+  #         npm config set supportedArchitectures.libc "glibc"
+  #         npm install
   #     - name: Set up QEMU
   #       uses: docker/setup-qemu-action@v3
   #       with:
@@ -328,7 +328,7 @@ jobs:
   #         options: '--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build'
   #         run: |
   #           set -e
-  #           npm run test
+  #           npm test
   #           ls -la
   # test-linux-aarch64-musl-binding:
   #   name: Test bindings on aarch64-unknown-linux-musl - node@lts
@@ -347,9 +347,9 @@ jobs:
   #       shell: bash
   #     - name: Install dependencies
   #       run: |
-  #         npm run config set supportedArchitectures.cpu "arm64"
-  #         npm run config set supportedArchitectures.libc "musl"
-  #         npm run install
+  #         npm config set supportedArchitectures.cpu "arm64"
+  #         npm config set supportedArchitectures.libc "musl"
+  #         npm install
   #     - name: Set up QEMU
   #       uses: docker/setup-qemu-action@v3
   #       with:
@@ -362,7 +362,7 @@ jobs:
   #         options: '--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build'
   #         run: |
   #           set -e
-  #           npm run test
+  #           npm test
   # test-linux-arm-gnueabihf-binding:
   #   name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
   #   needs:
@@ -386,8 +386,8 @@ jobs:
   #       shell: bash
   #     - name: Install dependencies
   #       run: |
-  #         npm run config set supportedArchitectures.cpu "arm"
-  #         npm run install
+  #         npm config set supportedArchitectures.cpu "arm"
+  #         npm install
   #     - name: Set up QEMU
   #       uses: docker/setup-qemu-action@v3
   #       with:
@@ -400,7 +400,7 @@ jobs:
   #         options: '--platform linux/arm/v7 -v ${{ github.workspace }}:/build -w /build'
   #         run: |
   #           set -e
-  #           npm run test
+  #           npm test
   #           ls -la
   # publish:
   #   name: Publish
@@ -419,15 +419,15 @@ jobs:
   #       uses: actions/setup-node@v4
   #       with:
   #         node-version: 20
-  #         cache: npm run
+  #         cache: npm
   #     - name: Install dependencies
-  #       run: npm run install
+  #       run: npm install
   #     - name: Download all artifacts
   #       uses: actions/download-artifact@v4
   #       with:
   #         path: artifacts
   #     - name: Move artifacts
-  #       run: npm run artifacts
+  #       run: npm artifacts
   #     - name: List packages
   #       run: ls -R ./npm
   #       shell: bash
