--- a/.github/workflows/naqsh-js-ci.yml
+++ b/.github/workflows/naqsh-js-ci.yml
@@ -141,7 +141,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bindings-${{ matrix.settings.target }}
-          path: naqsh-js/${{ env.APP_NAME }}.*.node
+          path: "**/${{ env.APP_NAME }}.*.node"
           if-no-files-found: error
   build-freebsd:
     runs-on: macos-13
@@ -187,7 +187,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bindings-freebsd
-          path: naqsh-js/${{ env.APP_NAME }}.*.node
+          path: "**/${{ env.APP_NAME }}.*.node"
           if-no-files-found: error
   # test-macOS-windows-binding:
   #   name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
