--- a/.github/workflows/naqsh-js-ci.yml
+++ b/.github/workflows/naqsh-js-ci.yml
@@ -42,18 +42,24 @@ jobs:
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
-            build: npm run build --target x86_64-unknown-linux-gnu
+            build: |
+              cd naqsh-js
+              npm run build --target x86_64-unknown-linux-gnu
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
-            build: npm run build --target x86_64-unknown-linux-musl
+            build: |
+              cd naqsh-js
+              npm run build --target x86_64-unknown-linux-musl
           - host: macos-latest
             target: aarch64-apple-darwin
             build: npm run build --target aarch64-apple-darwin
           - host: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
-            build: npm run build --target aarch64-unknown-linux-gnu
+            build: |
+              cd naqsh-js
+              npm run build --target aarch64-unknown-linux-gnu
           - host: ubuntu-latest
             target: armv7-unknown-linux-gnueabihf
             setup: |
@@ -71,6 +77,7 @@ jobs:
             target: aarch64-unknown-linux-musl
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
             build: |-
+              cd naqsh-js &&
               set -e &&
               rustup target add aarch64-unknown-linux-musl &&
               npm run build --target aarch64-unknown-linux-musl
@@ -114,7 +121,7 @@ jobs:
         shell: bash
       - name: Setup node x86
         if: matrix.settings.target == 'i686-pc-windows-msvc'
-        run: npm config set supportedArchitectures.cpu "ia32"
+        run: npm config set cpu "ia32"
         shell: bash
       - name: Install dependencies
         run: npm install
@@ -173,6 +180,7 @@ jobs:
             node -v
             echo "~~~~ npm --version ~~~~"
             npm --version
+            cd naqsh-js
             pwd
             ls -lah
             whoami
