--- a/.github/workflows/naqsh-js-ci.yml
+++ b/.github/workflows/naqsh-js-ci.yml
@@ -37,7 +37,7 @@ jobs:
           - host: windows-latest
             build: |
               npm run build --target i686-pc-windows-msvc
-              npm test
+#               npm test
             target: i686-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -415,36 +415,45 @@ jobs:
   #           set -e
   #           npm test
   #           ls -la
-  # publish:
-  #   name: Publish
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - build-freebsd
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs:
+      - build-freebsd
+      - build
   #     - test-macOS-windows-binding
   #     - test-linux-x64-gnu-binding
   #     - test-linux-x64-musl-binding
   #     - test-linux-aarch64-gnu-binding
   #     - test-linux-aarch64-musl-binding
   #     - test-linux-arm-gnueabihf-binding
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Setup node
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
-  #         cache: npm
-  #        cache-dependency-path: naqsh-js/package-lock.json
-  #     - name: Install dependencies
-  #       run: npm install
-  #     - name: Download all artifacts
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         path: artifacts
-  #     - name: Move artifacts
-  #       run: npm artifacts
-  #     - name: List packages
-  #       run: ls -R ./npm
-  #       shell: bash
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: naqsh-js/package-lock.json
+      - name: Install dependencies
+        run: npm install
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      - name: Move artifacts
+        run: npm artifacts
+      - name: List packages
+        run: ls -R ./npm
+        shell: bash
+      - name: Pack
+        run: npm pack
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: naqsh-0.2.0.tgz
+          path: "**/*.tgz"
+          if-no-files-found: error
   #     - name: Publish
   #       run: |
   #         npm config set provenance true
