UPDATE: js workflow 7

--- a/.github/workflows/naqsh-js-ci.yml
+++ b/.github/workflows/naqsh-js-ci.yml
@@ -442,7 +442,7 @@ jobs:
         with:
           path: artifacts
       - name: Move artifacts
-        run: npm artifacts
+        run: npm run artifacts
       - name: List packages
         run: ls -R ./npm
         shell: bash
